--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,7 @@ path = "./examples/balanced/main.rs"
 [[example]]
 name = "generic_addition"
 path = "./examples/generic_addition/main.rs"
+
+[[example]]
+name = "sat"
+path = "./examples/sat/main.rs"
