--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = ["crates/*"]
 grammar = { path = "crates/grammar" }
 production = { path = "crates/production" }
 from_inherited = { path = "crates/from_inherited" }
+logos = "0.16.0"
 
 [[example]]
 name = "basic-addition"
