--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ grammar = { path = "crates/grammar" }
 production = { path = "crates/production" }
 from_inherited = { path = "crates/from_inherited" }
 logos = "0.16.0"
+ebnf_proc_macro = { path = "crates/ebnf_proc_macro" }
 
 [[example]]
 name = "basic-addition"
@@ -56,3 +57,7 @@ path = "./examples/inheritance/three-address-code/main.rs"
 [[example]]
 name = "chess"
 path = "./examples/advanced/chess/main.rs"
+
+[[example]]
+name = "scream"
+path = "./examples/ebnf/scream/main.rs"
