--- a/crates/ebnf_parser/Cargo.toml
+++ b/crates/ebnf_parser/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 syn = "2.0.114"
 dyn_grammar = { path = "../dyn_grammar" }
+itertools = "0.14.0"
+proc-macro2 = "1.0.106"
